--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ header {
 }
 
 h1{
-  font-family: 'Sacramento', cursive;
+  font-family: 'Yellowtail', cursive;
   font-size: 4.5em;
   line-height: 1.2;
 }
