--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,12 @@ h3{
   font-weight: 500;
 }
 
+h4{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.8em;
+  line-height: 0.8;
+}
+
 .story-div {
   display: flex;
   justify-content: center;
@@ -149,6 +155,7 @@ p {
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
+  line-height: 1.8em;
 }
 
 .button-div {
@@ -166,7 +173,7 @@ p {
   border-radius: 10px;
   margin: 20px;
   color: white;
-  font-size: 1em;
+  font-size: 0.9em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
 }
