--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,8 @@ h3 {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   font-weight: 500;
+  width: 100%;
+  text-align: center;
 }
 
 h4 {
@@ -157,6 +159,7 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.8em;
+  color: white;
 }
 
 .button-div {
