--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,7 @@ p {
 .buttons {
   width: 75%;
   background-color: rgb(94, 94, 143);
+  /* background-color: rgb(159, 45, 45); */
   border: none;
   border-radius: 10px;
   margin: 15px;
